<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="submitCategoryOnClick"
    tools:context=".AddCategoryActivity">

    <EditText
        android:id="@+id/editAddCategoryTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/addCategoryToCategory"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCategoryName" />

    <EditText
        android:id="@+id/editCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/CategoryName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryTextView" />

    <TextView
        android:id="@+id/addCategoryTextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/magenta"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/addCategoryTitle"
        android:textColor="@color/magenta_brown"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#cc7f98"
        android:fontFamily="@font/baloo"
        android:onClick="submitCategoryOnClick"
        android:text="@string/add"
        android:textColor="@color/magenta_brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddCategoryTo" />

</androidx.constraintlayout.widget.ConstraintLayout>