<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryPageActivity">

    <TextView
        android:id="@+id/categoryPageTitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/aqua_blue"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/CategoryName"
        android:textColor="@color/dark_aqua_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addCategoryBtn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:onClick="goToAddCategoryPage"
        android:text="@string/addCategoryBtn"
        android:textColor="@color/magenta_brown"
        android:textSize="30sp"
        app:backgroundTint="#bc5c79"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/addRecipeBtn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:onClick="goToAddRecipePage"
        android:text="@string/addRecipeBtn"
        android:textColor="@color/red_brown"
        android:textSize="30sp"
        app:backgroundTint="@color/melon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCategoryBtn2"
        app:layout_constraintVertical_bias="0.327" />

    <ScrollView
        android:id="@+id/categoryPageScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryPageTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/categoryPageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>