<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipePageActivity">

    <TextView
        android:id="@+id/recipePageTitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/pink"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/RecipeName"
        android:textColor="@color/black_pink"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tagsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/pink_300"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/Tags"
        android:textColor="@color/black_pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipePageTitle" />

    <HorizontalScrollView
        android:id="@+id/tagsScrollView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsText">

        <LinearLayout
            android:id="@+id/tagsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/ingredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/pink_300"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/Ingredients"
        android:textColor="@color/black_pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsScrollView" />

    <ScrollView
        android:id="@+id/ingredientsScrollview"
        android:layout_width="300dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsText">

        <LinearLayout
            android:id="@+id/ingredientsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ingredient1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_pink"
                android:fontFamily="@font/baloo"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Ingredients"
                android:textColor="@color/black_pink"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/pink_300"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text="@string/Instructions"
        android:textColor="@color/black_pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsScrollview" />

    <ScrollView
        android:id="@+id/instructionsScrollView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsText">

        <LinearLayout
            android:id="@+id/instructionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/instruction1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_pink"
                android:fontFamily="@font/baloo"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Instructions"
                android:textColor="@color/black_pink"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/deleteRecipeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:background="#e44e62"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/black_pink"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsScrollView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#f2a6b0"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/black_pink"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>